# htmx-rs-template

./: .dockerignore  BOOTSTRAP_UNOCSS_GUIDE.md  CHEATSHEET.md  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  askama.toml  build.sh  docker-compose.yml  todo.md
nginx/: nginx.conf
plugins/: README.md  example-usage.md
plugins/htmx-core/: Cargo.toml
plugins/htmx-core/src/: app.rs  lib.rs  plugin.rs
plugins/htmx-landing/: .gitignore  Cargo.toml  README.md
plugins/htmx-landing/src/: lib.rs  models.rs  routes.rs  static_handler.rs
plugins/htmx-landing/static/: style.css
plugins/htmx-landing/templates/: index.html  stats.html
src/: config.rs  db.rs  main.rs  monitoring.rs  security.rs
src-templates/blocks/: footer.html
src-templates/modules/todos/: item.html
src-templates/modules/users/: detail.html  index.html  main.html  search_results.html
src/helpers/: cache.rs  config.rs  mod.rs  monitoring.rs  pagination.rs  security.rs
src/routes/: mod.rs  modal.rs  official.rs  pages.rs  static_assets.rs  todos.rs  users.rs
src/services/: cache_warmup.rs  mod.rs
static/css/: official.css  style.css
templates/: base.html  index.html  todos_full.html  users_full.html
templates/blocks/: footer.html  layout.html
templates/components/modal/: base.html
templates/components/pagination/: base.html
templates/layouts/: module.html
templates/modules/home/: main.html
templates/modules/todos/: create_form.html  index.html  main.html
templates/modules/users/: main.html  search_results.html  search_results.html.bak
templates/official/: index.html  layout.html
templates/pages/: home.html  todos.html  users.html
templates/todos/: item.html  stats.html
