[package]
name = "htmx-rs-template"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "^0.6", features = ["fs", "trace", "cors", "limit", "compression-br", "decompression-br"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
rust-embed = "8.5"
mime_guess = "2.0"
figment = { version = "0.10", features = ["env", "toml"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
lazy_static = "1.4"
regex = "1.10"
rand = "0.8.5"
chrono = "0.4.31"
prometheus = "0.13"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
tower = { version = "0.5", features = ["util", "limit"] }
futures = "0.3"
