[package]
name = "htmx-landing"
version = "0.1.0"
edition = "2021"

[dependencies]
htmx-core = { path = "../htmx-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
rust-embed = "8.5"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
